--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -12,8 +12,8 @@
 
     <div class="row mt-5">
         <div class="col-6 offset-3">
-                <h2 class="text-center">로그인</h2>
-                <form action="/account/login" method="post">
+            <h2 class="text-center">로그인</h2>
+            <form action="/account/login" method="post">
                 <div th:if="${param.error}">
                     <div class="alert alert-danger mt-4">
                         사용자ID/email 또는 비밀번호를 확인해주세요
@@ -30,11 +30,17 @@
                     <input type="password" id="password" name="password" class="form-control" required />
                 </div>
 
-                <div class="text-center mt-3">
-                    <button class="btn btn-success">로그인</button>
-                    <a type="button" href="/account/list" class = "btn btn-secondary"> 회원목록 </a>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-auto text-center">
+                            <!--<a type="button" href="/account/list" class = "btn btn-secondary"> 회원목록 </a> -->
+                            <a type="button" href="/account/register" class="btn btn-secondary"> 회원가입</a>
+                            <button class="btn btn-success">로그인</button>
+                            <a type="button" href="/account/find-email" class="btn btn-primary"> 이메일 찾기</a>
+                        </div>
+                    </div>
                 </div>
-                </form>
+            </form>
         </div>
     </div>
 </div>
