--- a/src/main/resources/templates/account/find-email.html
+++ b/src/main/resources/templates/account/find-email.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout.html}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>이메일 찾기</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<div layout:fragment="content">
     <div class="container">
         <div class="row mt-5">
             <div class="col-6 offset-3">
-                <h2 class="text-center"> 이메일 찾기</h2> </br>
+                <h5 class="text-center"> 이메일 찾기</h5> </br>
                 <form action="/account/find-email" method="post">
                     <div class="mb-3">
                         <label for="name">이름</label>
@@ -55,5 +58,6 @@
             });
         </script>
     </div>
+</div>
 </body>
 </html>
